force-app/main/default/objects/Work_Order__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smart Website</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Van Graphic</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
            <value>
                <fullName>PMC Renter</fullName>
            </value>
            <value>
                <fullName>Networking Group</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Yelp</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>