force-app/main/default/objects/Work_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <inlineHelpText>Name of person requesting the clean</inlineHelpText>
    <label>Requested By</label>
    <length>150</length>
    <type>Text</type>
</CustomField>