force-app/main/default/objects/Work_Order__c/fields/Rugs__c.field-meta.xml
<CustomField>
    <fullName>Rugs__c</fullName>
    <label>Rugs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3X5</fullName>
            </value>
            <value>
                <fullName>5X7</fullName>
            </value>
            <value>
                <fullName>8X10</fullName>
            </value>
            <value>
                <fullName>9X12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>