force-app/main/default/objects/Work_Order__c/fields/Scheduling_Comments__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Comments__c</fullName>
    <inlineHelpText>Add any comments about scheduling attempts (left message for tenant, person will call back when ready to schedule, etc.)</inlineHelpText>
    <label>Scheduling Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>