force-app/main/default/objects/Work_Order__c/fields/Send_WO_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_WO_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send WO Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>