force-app/main/default/objects/Work_Order__c/fields/SFDC_Field__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Field</label>
    <type>Checkbox</type>
</CustomField>