force-app/main/default/objects/Work_Order__c/fields/Site_Mgn__c.field-meta.xml
<CustomField>
    <fullName>Site_Mgn__c</fullName>
    <inlineHelpText>For work order with Team Van assigned (3+ crew members required), there will be a designated “Site Manager” who manages the team and the job. Add initials here</inlineHelpText>
    <label>Site Mgr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>