force-app/main/default/objects/Work_Order__c/fields/Soil_Removal_Rate_per_100__c.field-meta.xml
<CustomField>
    <fullName>Soil_Removal_Rate_per_100__c</fullName>
    <formula>Total_Net_Click_On_Time__c / Balance_Due1__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Click on Time/ Balance Due * 100</inlineHelpText>
    <label>Soil Removal Rate per $100</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>