force-app/main/default/objects/Work_Order__c/fields/Soiled_Pads_per_Click_On_Machine_Hour__c.field-meta.xml
<CustomField>
    <fullName>Soiled_Pads_per_Click_On_Machine_Hour__c</fullName>
    <formula>Pad_Count__c  /  Total_Net_Click_On_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pad Count divided by Total Net Click On Time</inlineHelpText>
    <label>Soiled Pads per Click On Machine Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>