force-app/main/default/objects/Work_Order__c/fields/Stairs__c.field-meta.xml
<CustomField>
    <fullName>Stairs__c</fullName>
    <label>Stairs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 flight stairs</fullName>
            </value>
            <value>
                <fullName>3 flight stairs</fullName>
            </value>
            <value>
                <fullName>2 flight stairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>