force-app/main/default/objects/Work_Order__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Earliest date to clean carpet</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>