force-app/main/default/objects/Work_Order__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Setting band width for calendar event</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>