force-app/main/default/objects/Work_Order__c/fields/Status_Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Status_Invoice_Paid__c</fullName>
    <formula>IF(ISPICKVAL( Status__c , &apos;Invoice Paid&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>