force-app/main/default/objects/Work_Order__c/fields/Studio__c.field-meta.xml
<CustomField>
    <fullName>Studio__c</fullName>
    <formula>&quot;$120&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Studio</label>
    <type>Text</type>
</CustomField>