force-app/main/default/objects/Work_Order__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <description>Sums all work order item prices associated to the work order</description>
    <label>Sub Total</label>
    <summarizedField>Work_Order_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Work_Order_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>