force-app/main/default/objects/Work_Order__c/fields/Team_Members_3__c.field-meta.xml
<CustomField>
    <fullName>Team_Members_3__c</fullName>
    <formula>Team_Members__c</formula>
    <label>Team Members Assigned</label>
    <type>Text</type>
</CustomField>