force-app/main/default/objects/Work_Order__c/fields/Text_Completion_2_Notification__c.field-meta.xml
<CustomField>
    <fullName>Text_Completion_2_Notification__c</fullName>
    <label>Text Completion 2 Notification</label>
    <type>Email</type>
</CustomField>