force-app/main/default/objects/Work_Order__c/fields/Text_Completion_Notification__c.field-meta.xml
<CustomField>
    <fullName>Text_Completion_Notification__c</fullName>
    <inlineHelpText>Auto populates from account if customer has opted to get a text message when work is complete</inlineHelpText>
    <label>Text Completion Notfication</label>
    <type>Email</type>
</CustomField>