force-app/main/default/objects/Work_Order__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <inlineHelpText>Indicates earliest start time and may indicate latest completion date/time.  For appointments use HT for Hard Time.  Bandwidth examples:  Start 12 Noon, Complete by 5PM, or June 30 2PM, Complete July 1 9AM, or June 3-5.</inlineHelpText>
    <label>Time Frame</label>
    <length>100</length>
    <type>Text</type>
</CustomField>