force-app/main/default/objects/Work_Order__c/fields/Tip_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tip_Amount__c</fullName>
    <inlineHelpText>Please enter amount if you were tipped</inlineHelpText>
    <label>Tip Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>