force-app/main/default/objects/Work_Order__c/fields/Total_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Hours__c</fullName>
    <formula>( (  Field_Crew_Net_time__c  *  Number_of_Team_Members__c  )  +   ( Adjusted_Labor_Hours__c ) )  + Total_Labor_Hours_OLD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculates Field Crew Net Time X # of Team Members</inlineHelpText>
    <label>Total Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>