force-app/main/default/objects/Work_Order__c/fields/Total_Labor_Hours_OLD__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Hours_OLD__c</fullName>
    <inlineHelpText>Total number of labor hours spent at a big box commercial property.</inlineHelpText>
    <label>Total Labor Hours (OLD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>