force-app/main/default/objects/Work_Order__c/fields/Total_Net_Click_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Click_On_Time__c</fullName>
    <formula>Net_Click_On_CM1__c + Net_Click_On_CM2__c +  Net_Click_On_CM3__c +
Net_Click_On_CM4__c + Net_Click_On_CM5__c +  Net_Click_On_CM6__c +  Net_Click_On_CM7__c +  Net_Click_On_CM8__c +  Net_Click_On_CM9__c +  Net_Click_On_CM10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculates the sum of click on time of CM1 through CM10</inlineHelpText>
    <label>Total Net Click On Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>