force-app/main/default/objects/Work_Order__c/fields/Unit_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_Formula__c</fullName>
    <formula>Account_Name__r.Unit_Number_txt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number Formula</label>
    <type>Text</type>
</CustomField>