force-app/main/default/objects/Work_Order__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFH</fullName>
            </value>
            <value>
                <fullName>Apt/Condo</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Studio APT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>