force-app/main/default/objects/Work_Order__c/fields/Urine_smell_activated_during_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Urine_smell_activated_during_cleaning__c</fullName>
    <inlineHelpText>Indicate location and degree of smell.</inlineHelpText>
    <label>Urine smell activated during cleaning</label>
    <type>TextArea</type>
</CustomField>