force-app/main/default/objects/Work_Order__c/fields/Urine_Smell_at_entry__c.field-meta.xml
<CustomField>
    <fullName>Urine_Smell_at_entry__c</fullName>
    <label>Urine Smell at entry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>