force-app/main/default/objects/Work_Order__c/fields/Urine_smell_at_head_level_in_following__c.field-meta.xml
<CustomField>
    <fullName>Urine_smell_at_head_level_in_following__c</fullName>
    <inlineHelpText>Indicate location and degree of smell</inlineHelpText>
    <label>Urine smell at head level in following</label>
    <type>TextArea</type>
</CustomField>