force-app/main/default/objects/Work_Order__c/fields/Van_assignment__c.field-meta.xml
<CustomField>
    <fullName>Van_assignment__c</fullName>
    <label>Van assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Van 1</fullName>
                <color>#FFFF66</color>
                <label>Van 1</label>
            </value>
            <value>
                <fullName>Van 2</fullName>
                <color>#CC33CC</color>
                <label>Van 2</label>
            </value>
            <value>
                <fullName>Van 3</fullName>
                <color>#3333FF</color>
                <label>Van 3</label>
            </value>
            <value>
                <fullName>Van 4</fullName>
                <color>#33CC00</color>
                <label>Van 4</label>
            </value>
            <value>
                <fullName>Van 5</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Van 5</label>
            </value>
            <value>
                <fullName>Team Van</fullName>
                <color>#FF9900</color>
                <label>Team Van</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>