force-app/main/default/objects/Work_Order__c/fields/Ventilation_on__c.field-meta.xml
<CustomField>
    <fullName>Ventilation_on__c</fullName>
    <label>Ventilation on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>