force-app/main/default/objects/Work_Order__c/fields/Walk_In_Closet__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Closet__c</fullName>
    <label>Walk In Closet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Walk in Closet</fullName>
            </value>
            <value>
                <fullName>2 Walk in Closet</fullName>
            </value>
            <value>
                <fullName>3 Walk in Closet</fullName>
            </value>
            <value>
                <fullName>4 Walk in Closet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>