force-app/main/default/objects/Work_Order__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <label>Who</label>
    <length>15</length>
    <type>Text</type>
</CustomField>