force-app/main/default/objects/Work_Order__c/fields/WO_Email__c.field-meta.xml
<CustomField>
    <fullName>WO_Email__c</fullName>
    <label>WO Email</label>
    <type>Email</type>
</CustomField>