force-app/main/default/objects/Work_Order__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>