force-app/main/default/objects/Work_Order__c/fields/X1bd_hall_liv_din_rm_Apt_Condo__c.field-meta.xml
<CustomField>
    <fullName>X1bd_hall_liv_din_rm_Apt_Condo__c</fullName>
    <formula>IF(Owner:User.ProfileId = &apos;00e1P000000Zli9&apos; , Owner:User.Contact.Account.X1_BD_Apt_Condo_cost__c, $CustomMetadata.C__mdt.D.X1BD_Apt_Condo_cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assuming full condo 1 BD, Liv, Din, Hall etc. Use lowest price between this and Est. Cost</inlineHelpText>
    <label>1BD Apt/Condo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>