force-app/main/default/objects/Work_Order__c/fields/X2nd_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Check_Number__c</fullName>
    <label>2nd Check Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>