force-app/main/default/objects/Work_Order__c/fields/Your_Name__c.field-meta.xml
<CustomField>
    <fullName>Your_Name__c</fullName>
    <label>Your Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>