force-app/main/default/objects/Work_Order__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <label>Commercial</label>
</RecordType>