force-app/main/default/objects/Work_Order__c/recordTypes/Commercial_IC.recordType-meta.xml
<RecordType>
    <fullName>Commercial_IC</fullName>
    <active>true</active>
    <label>Commercial IC</label>
</RecordType>