force-app/main/default/objects/Work_Order__c/recordTypes/Commercial_ICC.recordType-meta.xml
<RecordType>
    <fullName>Commercial_ICC</fullName>
    <active>true</active>
    <description>This record is for accounts who have committed to a regular cleaning cycle with little to no variation in timeframe</description>
    <label>Commercial ICC</label>
</RecordType>