force-app/main/default/objects/Work_Order__c/recordTypes/Customer_Community.recordType-meta.xml
<RecordType>
    <fullName>Customer_Community</fullName>
    <active>true</active>
    <label>Customer Community</label>
</RecordType>