force-app/main/default/objects/Work_Order__c/recordTypes/Field_Crew_View.recordType-meta.xml
<RecordType>
    <fullName>Field_Crew_View</fullName>
    <active>true</active>
    <description>This is the page the field crews will view on Force 1 when completing a wo</description>
    <label>Field Crew View</label>
</RecordType>