force-app/main/default/objects/Work_Order__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <label>Residential</label>
</RecordType>