force-app/main/default/objects/Work_Order__c/validationRules/Discount_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Field_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISPICKVAL(Discount__c, &quot;&quot;),
ISPICKVAL(Discount__c, &quot;None&quot;))</errorConditionFormula>
    <errorMessage>Please add a value to the Discount field.</errorMessage>
</ValidationRule>