force-app/main/default/objects/Work_Order__c/validationRules/End_Time_Field_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Field_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>(
ISPICKVAL(Status__c,&quot;Completed&quot;)||
ISPICKVAL(Status__c,&quot;Invoiced&quot;)||
ISPICKVAL(Status__c,&quot;Invoice Paid&quot;)
)&amp;&amp;
(
ISBLANK( Field_Crew_End_Time__c ))</errorConditionFormula>
    <errorMessage>Field Crew End Time Required</errorMessage>
</ValidationRule>