force-app/main/default/objects/Work_Order__c/validationRules/Force_1_field_service_wo_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_1_field_service_wo_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Profile.Id = &quot;00e1a000000F3S5&quot;,
NOT(ISPICKVAL(Status__c,&apos;Completed&apos;)),
 NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Scheduled&quot;)) )</errorConditionFormula>
    <errorMessage>Access denied.  Status must = Scheduled</errorMessage>
</ValidationRule>