force-app/main/default/objects/Work_Order__c/validationRules/Restrict_Force_1_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Force_1_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( PRIORVALUE(Status__c) = &quot;Completed&quot;,
 $Profile.Id = &quot;00e1a000000F3S5&quot;)</errorConditionFormula>
    <errorMessage>Completed Status, contact front office</errorMessage>
</ValidationRule>