force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Property_City__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>