force-app/main/default/objects/Work_Order__c/listViews/Cancelled_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Cancelled_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Property_City__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled</label>
</ListView>