force-app/main/default/objects/Work_Order__c/listViews/Commerical_ICs.listView-meta.xml
<ListView>
    <fullName>Commerical_ICs</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Balance_Due1__c</columns>
    <columns>Property_City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Order__c.Commercial_IC</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Invoiced,Invoice Paid</value>
    </filters>
    <label>Completed ICs</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>