force-app/main/default/objects/Work_Order__c/listViews/Field_Crew_Monitoring.listView-meta.xml
<ListView>
    <fullName>Field_Crew_Monitoring</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Net_Click_On_CM1__c</columns>
    <columns>Net_Click_On_CM2__c</columns>
    <columns>Net_Click_On_CM3__c</columns>
    <columns>Net_Click_On_CM4__c</columns>
    <columns>Net_Click_On_CM5__c</columns>
    <columns>Net_Click_On_CM6__c</columns>
    <columns>Click_on_time_per_labor_Hr__c</columns>
    <columns>Billable_per_Labor_Hour__c</columns>
    <columns>Balance_Due1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Completed,Invoiced,Invoice Paid</value>
    </filters>
    <label>Field Crew Monitoring</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>