force-app/main/default/objects/Work_Order__c/listViews/Front_Desk_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Front_Desk_Follow_Up</fullName>
    <columns>Account_Name__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Property_City__c</columns>
    <columns>NAME</columns>
    <columns>Front_Desk_Follow_up__c</columns>
    <columns>Van_assignment__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Call_Backs__c</columns>
    <columns>Tip_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed,Invoiced,Invoice Paid</value>
    </filters>
    <label>Front Desk Follow Up</label>
    <sharedTo>
        <group>AllInternalUsers</group>
    </sharedTo>
</ListView>